# hubble

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: hubble.example.yaml
docs/: architecture.md  execution-log.md  http-tool.md  layer-contracts.md  plugin-contract.md  reference-projects.md  roadmap.md  tasks.md
examples/: alertmanager_payload.json  webhook_payload.json
src/hubble/: __init__.py  runtime.py  server.py
src/hubble/adapters/: __init__.py  alertmanager.py  base.py  webhook.py
src/hubble/alerts/: __init__.py  models.py  service.py
src/hubble/channels/: __init__.py  base.py  config.py  feishu.py  models.py
src/hubble/core/: __init__.py  engine.py  models.py
src/hubble/events/: __init__.py  bus.py  models.py
src/hubble/incidents/: __init__.py  models.py  service.py
src/hubble/ingress/: __init__.py  base.py
src/hubble/intake/: __init__.py  models.py  service.py
src/hubble/model/: __init__.py  base.py
src/hubble/notifiers/: base.py
src/hubble/policies/: __init__.py  config.py  models.py  service.py
src/hubble/reasoning/: __init__.py  config.py  models.py  service.py
src/hubble/session/: __init__.py  base.py
src/hubble/tools/: __init__.py  base.py  config.py  http.py  prometheus.py
tests/: test_feishu_channel.py  test_http_tool.py  test_policy.py  test_prometheus_tool.py  test_reasoning.py  test_server.py
